# snorkel

./: Cargo.toml  README.md  flake.nix  shell.nix
benches/: 2d_vec_lookup.rs  flat_vec_lookup.rs  map_lookup.rs
src/: chars.rs  config.rs  lib.rs  main.rs  op.rs  orca.rs  simple_loop.rs  snorkel.rs  snrkl.rs  state.rs  timerfd.rs
src/mode/: insert.rs  mod.rs  normal.rs  replace.rs  select.rs
src/ui/: bottombar.rs  canvas.rs  mod.rs  topbar.rs
