[package]
name = "snorkel"
authors = [ "k@ioctl.it" ]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snorkel"
path = "bin/snorkel.rs"

[dependencies]
crossterm = "0.26.1"
jumprope = "1.1.1"
libc = "0.2.139"
ndhistogram = "0.8.0"
nom = "7.1.3"
portmidi = "0.2.6"
rosc = "0.8.1"
spin_sleep = "1.1.1"
timerfd = "1.4.0"
tui = "0.19.0"
tui-logger = "0.8.3"
log = "0.4.17"
